--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-slot": "^1.1.0",
     "axios": "^1.2.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -18,6 +19,7 @@
     "firebase": "^9.15.0",
     "framer-motion": "^11.0.8",
     "lucide": "^0.344.0",
+    "lucide-react": "^0.441.0",
     "moment-timezone": "^0.5.45",
     "mongodb": "^4.8.1",
     "next": "latest",
@@ -37,5 +39,6 @@
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4",
     "typescript": "4.6.3"
-  }
+  },
+  "packageManager": "pnpm@9.4.0+sha512.f549b8a52c9d2b8536762f99c0722205efc5af913e77835dbccc3b0b0b2ca9e7dc8022b78062c17291c48e88749c70ce88eb5a74f1fa8c4bf5e18bb46c8bd83a"
 }
