--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@aws-sdk/lib-storage": "^3.651.1",
     "@ffmpeg/ffmpeg": "^0.12.10",
     "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-select": "^2.1.1",
