--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-hook-form": "^7.51.0",
     "react-toastify": "^10.0.4",
     "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
