--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "date-fns": "^3.3.1",
     "firebase": "^9.15.0",
     "framer-motion": "^11.0.8",
+    "lodash": "^4.17.21",
     "lucide": "^0.344.0",
     "lucide-react": "^0.441.0",
     "moment-timezone": "^0.5.45",
